--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,27 @@
 * {
-  color: black;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+	padding: 0;
+	border: 0;
+  box-sizing: border-box;
+}
+
+#app {
+  height: 100vh;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+}
+
+h1 {
+  font-size: 2rem
+}
+
+header h1 {
+  margin-left: 0.5rem;
 }
