--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,7 +15,11 @@ header {
 }
 
 main {
-  margin-top: 12px;
+  margin-top: 18px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 h1 {
@@ -25,6 +29,21 @@ h1 {
 a {
   text-decoration: none;
   cursor: pointer;
+  color: #8ab4f7;
+}
+
+button {
+  cursor: pointer;
+  background: none;
+  font-size: 16px;
+  padding: 0 11px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button:hover {
+  background-color: #f5f6f6;
 }
 
 table { 
@@ -56,10 +75,31 @@ tbody tr {
   margin: 0 20px;
 }
 
+.control-container {
+  margin: 18px;
+  height: 44px;
+  border: 1px solid #e9eaea;
+  border-radius: 8px;
+  box-shadow: 0 1px 2px 0 #0000001a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .repo-description {
   text-align: left !important;
 }
 
 .repo-no {
   font-weight: bold;
+}
+
+button.slide {
+  width: 105px;
+  height: 100%;
+}
+
+button.page {
+  width: 40px;
+  height: 100%;
 }
